/* 
  Localizable.strings
  UltimatePortfolio

  Created by Christopher Eadie on 17/02/2022.
  
*/


/* Item */
"New Item" = "New Item";

/* SortOrder */
"Creation Date" = "Creation Date";
"Optimised" = "Optimised";
"Title" = "Title";

/* Priority */
"Low" = "Low";
"Medium" = "Medium";
"High" = "High";


/* Project*/
"New Project" = "New Project";

/* ProjectColor*/
"Pink" = "Pink";
"Purple" = "Purple";
"Red" = "Red";
"Orange" = "Orange";
"Gold" = "Gold";
"Green" = "Green";
"Teal" = "Teal";
"Light Blue" = "Light Blue";
"Dark Blue" = "Dark Blue";
"Midnight" = "Midnight";
"Dark Gray" = "Dark Gray";
"Gray" = "Gray";



/* ContentView */
/* Tabs */
"Home" = "Home";
"Open" = "Open";
"Closed" = "Closed";
"Awards" = "Awards";


/* HomeView */
"Up next" = "Up next";
"More to explore" = "More to explore";
"Add data" = "Add data";
"%@, %lld items, %g%% complete" = "%@, %lld items, %g%% complete";


/* ProjectsView */
"Open Projects" = "Open Projects";
"Closed Projects" = "Closed Projects";
"There's nothing here right now" = "There's nothing here right now";
"Add New Item" = "Add New Item";
"Add Project" = "Add Project";
"Sort" = "Sort";
"Sort items" = "Sort items";


/* ItemRowView */
"%@, completed." = "%@, completed.";
"%@, high priority." = "%@, high priority.";


/* SelectSomethingView */
"Please select something from the menu to begin." = "Please select something from the menu to begin.";


/* EditProjectView */
"Basic settings" = "Basic settings";
"Project name" = "Project name";
"Description of this project" = "Description of this project";
"Custom project colour" = "Custom project colour";
"Closing a project moves it from the Open to Closed tab; deleting it removes the project entirely." = "Closing a project moves it from the Open to Closed tab; deleting it removes the project entirely.";
"Upload to iCloud" = "Upload to iCloud";
"Reopen this project" = "Reopen this project";
"Close this project" = "Close this project";
"Delete this project" = "Delete this project";
"Edit project" = "Edit project";
"Delete Project?" = "Delete Project?";
"Are you sure you want to delete this project? You will also delete all the items it contains." = "Are you sure you want to delete this project? You will also delete all the items it contains.";
"Delete" = "Delete";
"Project reminders" = "Project reminders";
"Show reminders" = "Show reminders";
"Daily reminder time" = "Daily reminder time";
"Oops!" = "Oops!";
"There was a problem; please check you have notifications enabled." = "There was a problem; please check you have notifications enabled.";
"Open Settings" = "Open Settings";


/* EditItemView */
"Basic settings" = "Basic settings";
"Item name" = "Item name";
"Description" = "Description";
"Priority" = "Priority";
"Mark completed" = "Mark completed";
"Edit Item" = "Edit Item";


/* AwardsView */
"Locked" = "Locked";
"Unlocked: %@" = "Unlocked: %@";
"OK" = "OK";


/* UnlockView */
"Sorry, there was an error loading the store. Please try again later." = "Sorry, there was an error loading the store. Please try again later.";
"Loading..." = "Loading...";
"Thank you. You rock 🤘" = "Thank you. You rock 🤘";
"Thank you. Your request is pending approval but you can carry on using the app in the mean time." = "Thank you. Your request is pending approval but you can carry on using the app in the mean time.";


/* ProductView */
"Get Unlimited Projects" = "Get Unlimited Projects";
"You can add three projects for free, or pay %@ to add unlimited projects." = "You can add three projects for free, or pay %@ to add unlimited projects.";
"If you have already bought the unlock on another device, press Restore Purchases." = "If you have already bought the unlock on another device, press Restore Purchases.";
"Buy: %@" = "Buy: %@";
"Restore Purchases" = "Restore Purchases";


/* Widgets */
"Up next…" = "Up next…";
"Nothing!" = "Nothing!";

/* UpNextWidget */
"Your #1 priority item." = "Your number one priority item.";

/* NextFewWidget */
"Your most important items." = "Your most important items.";
