//
//  ProjectHeaderView.swift
//  UltimatePortfolio
//
//  Created by Christopher Eadie on 10/02/2022.
//

import SwiftUI

struct ProjectHeaderView: View {
    @ObservedObject var project: Project
    
    var body: some View {
        HStack {
            VStack(alignment: .leading) {
                Text(project.projectTitle)
                
                ProgressView(value: project.completionAmount)
                    .accentColor(Color(project.projectColor))
            }
            
            Spacer()
            
            NavigationLink(destination: EditProjectView(project: project)) {
                Image(systemName: SystemImage.squareAndPencil)
                    .imageScale(.large)
            }
            .buttonStyle(PlainButtonStyle())
            .accessibilityIdentifier("edit project")
        }
        .padding(.bottom, 10)
        .accessibilityElement(children: .combine)
    }
}

struct ProjectHeaderView_Previews: PreviewProvider {
    static let project: Project = Project.example
    
    static var previews: some View {
        ProjectHeaderView(project: project)
    }
}
